<resources>
    <string name="app_name">ForAcess</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>
    <string name="Login">Login</string>
    <string name="pass">Senha</string>
    <string name="home">Início</string>
    <string name="acessos">Acessos</string>
    <string name="request">Solicitação de acesso</string>
    <string name="predio">Prédio</string>
    <string name="andar">Andar</string>
    <string name="porta">Porta</string>
    <string name="acesso">Acesso</string>
    <string name="send">Enviar Solicitação</string>
    <string name="justificativa">Justificativa</string>
</resources>
