<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RequestActivity"
    tools:showIn="@layout/app_bar_req">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/rounduser"
        android:elevation="4dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/predio"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/andar"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/porta"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/spinner_style">

                <Spinner
                    android:id="@+id/spinnerpredio"
                    style="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="118dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/white"
                    android:dropDownWidth="105dp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignEnd="@+id/spinnerpredio"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="0dp"
                    app:srcCompat="@drawable/ic_expand_button" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/spinner_style">

                <Spinner
                    android:id="@+id/spinnerandar"
                    style="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="118dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/white"
                    android:dropDownWidth="105dp" />

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignEnd="@+id/spinnerandar"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="0dp"
                    app:srcCompat="@drawable/ic_expand_button" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/spinner_style">

                <Spinner
                    android:id="@+id/spinnerPorta"
                    style="@style/Base.Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="118dp"
                    android:layout_height="27dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/white"
                    android:dropDownWidth="120dp" />

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignEnd="@+id/spinnerPorta"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/ic_expand_button" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="133dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/justificativa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounduser"
        android:elevation="4dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundbutton"
        android:text="@string/send"
        android:textColor="@color/cinzaazulclaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>